--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
     "cheerio": "^1.0.0-rc.5",
+    "node-fetch": "^2.6.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -33,6 +34,7 @@
     "@types/cheerio": "^0.22.24",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/node-fetch": "^2.5.8",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
